--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -1,3 +1,3 @@
-# This file lists all individuals having contributed content to the repository.
+# This file lists all individuals have contributed content to the repository.
 
 Xolani Z Chauke <xolanichauke@proton.me>
